set path to Fitbit repo

--- a/numpy_pandas_demo.ipynb
+++ b/numpy_pandas_demo.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Numpy and Pandas Demo\n",
     "\n",
-    "This notebook provides a very basic introduction to the Numpy and Pandas Python packages. This notebook must be run with a Jupyter kernel that has Numpy, Pandas, and Matplotlib installed. You can execute the single cell in the following notebook to install suck a kernel: https://github.com/frenchwr/data_viz_wg/blob/master/create_numpy_pandas_kernel.ipynb"
+    "This notebook provides a very basic introduction to the Numpy and Pandas Python packages. This notebook must be run with a Jupyter kernel that has Numpy, Pandas, and Matplotlib installed. You can execute the single cell in the following notebook to install such a kernel: https://github.com/frenchwr/data_viz_wg/blob/master/create_numpy_pandas_kernel.ipynb"
    ]
   },
   {
@@ -319,8 +319,8 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "git clone https://github.com/willie8338/Fitbit.git # download some fitbit data\n",
-    "ls -l --color Fitbit"
+    "git clone https://github.com/willie8338/Fitbit.git ~/Fitbit # download some fitbit data\n",
+    "ls -l --color ~/Fitbit"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "ls -l --color Fitbit/data"
+    "ls -l --color ~/Fitbit/data"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "source": [
     "# The CSV has two sections - Activity and Sleep. Let's just focus on the Activity data.\n",
     "# Excel spreadsheets can also be loaded directly into a Pandas dataframe\n",
-    "df = pd.read_csv(\"Fitbit/data/fitbit_export_20140710.csv\",skiprows=1,nrows=50,index_col=0)"
+    "df = pd.read_csv(\"~/Fitbit/data/fitbit_export_20140710.csv\",skiprows=1,nrows=50,index_col=0)"
    ]
   },
   {
